pez.sh/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pezsh
  labels:
    app: pezsh
  namespace: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pezsh
  template:
    metadata:
      labels:
        app: pezsh
    spec:
      containers:
      - name: pezsh
        image: gcr.io/rwejlgaard/pez.sh:${SEMVER}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
