pez.sh/k8s/istio-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pezsh-vs
spec:
  hosts:
  - "pez.sh"
  - "www.pez.sh"
  gateways:
  - pezsh-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: pezsh.web.svc.cluster.local
